[gd_scene load_steps=21 format=3 uid="uid://pw1myqomeom7"]

[ext_resource type="Script" uid="uid://duyin3ykk8d8r" path="res://shared-code/entities/player/player.gd" id="1_du1rf"]
[ext_resource type="Script" uid="uid://c8ipqhdtu8w76" path="res://shared-code/entities/stats/entity_stats.gd" id="2_jx3s8"]
[ext_resource type="Script" uid="uid://b7au2j3m5osbc" path="res://shared-code/entities/player/player_input.gd" id="2_llu1g"]
[ext_resource type="Script" uid="uid://banbhjws8f1uu" path="res://shared-code/entities/states/state_machine.gd" id="5_o5tub"]
[ext_resource type="PackedScene" uid="uid://b531oyvupifil" path="res://shared-code/entities/player/states/player_idle_state.tscn" id="6_fh4g5"]
[ext_resource type="PackedScene" uid="uid://bdsenapllptps" path="res://shared-code/entities/player/states/player_move_state.tscn" id="7_xx4oc"]
[ext_resource type="Script" uid="uid://f5j8xrs4q7ii" path="res://shared-code/entities/entity_visual.gd" id="9_l20xk"]
[ext_resource type="Script" uid="uid://j42apd0ldaf5" path="res://shared-code/entities/player/player_select_target.gd" id="9_llu1g"]
[ext_resource type="Script" uid="uid://b21on2dx1kubr" path="res://shared-code/entities/player/states/player_jump_state.gd" id="9_w0851"]
[ext_resource type="Script" uid="uid://c7gf4p8gtvxqy" path="res://shared-code/entities/player/states/player_falling_state.gd" id="10_hpuls"]
[ext_resource type="PackedScene" uid="uid://l386dquxgm0v" path="res://shared-code/views/name_plate/name_plate.tscn" id="10_lay5f"]
[ext_resource type="PackedScene" uid="uid://b1bujdj5x0xe2" path="res://shared-code/views/skills/bar/skillbar.tscn" id="11_fa8ny"]

[sub_resource type="Resource" id="Resource_jx3s8"]
script = ExtResource("2_jx3s8")
metadata/_custom_type_script = "uid://c8ipqhdtu8w76"

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g00a7"]

[sub_resource type="BoxMesh" id="BoxMesh_1meu1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjdgv"]
albedo_color = Color(0.281187, 0.281187, 0.281187, 1)

[sub_resource type="SphereMesh" id="SphereMesh_3rqlc"]

[sub_resource type="SphereMesh" id="SphereMesh_r0lv8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_llu1g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t5uow"]
height = 1.93918

[node name="Player" type="Node3D" node_paths=PackedStringArray("body")]
script = ExtResource("1_du1rf")
stats = SubResource("Resource_jx3s8")
body = NodePath("Body")

[node name="Input" type="Node" parent="."]
unique_name_in_owner = true
process_mode = 4
script = ExtResource("2_llu1g")

[node name="StateMachines" type="Node" parent="."]

[node name="Movement" type="Node" parent="StateMachines" node_paths=PackedStringArray("default_state")]
script = ExtResource("5_o5tub")
default_state = NodePath("idle")

[node name="idle" parent="StateMachines/Movement" instance=ExtResource("6_fh4g5")]

[node name="move" parent="StateMachines/Movement" instance=ExtResource("7_xx4oc")]

[node name="jump" type="Node" parent="StateMachines/Movement"]
script = ExtResource("9_w0851")

[node name="falling" type="Node" parent="StateMachines/Movement"]
script = ExtResource("10_hpuls")

[node name="Visual" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("CapsuleMesh_g00a7")
script = ExtResource("9_l20xk")

[node name="Face" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(0.683087, 0, 0, 0, 0.293705, 0, 0, 0, 0.459851, -0.0136241, 0.490229, -0.42445)
mesh = SubResource("BoxMesh_1meu1")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_xjdgv")

[node name="DirectionMarker" type="MeshInstance3D" parent="Visual/Face"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.387005, -1.32943, 0.0808203)
mesh = SubResource("SphereMesh_3rqlc")
skeleton = NodePath("../../../Body")
surface_material_override/0 = SubResource("StandardMaterial3D_xjdgv")

[node name="DirectionMarker2" type="MeshInstance3D" parent="Visual/Face"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.389233, -1.33306, -0.00886428)
mesh = SubResource("SphereMesh_r0lv8")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_xjdgv")

[node name="Targeting" type="Area3D" parent="."]
unique_name_in_owner = true
process_mode = 4
collision_layer = 2147483648
collision_mask = 15
script = ExtResource("9_llu1g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Targeting"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_llu1g")

[node name="Body" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
shape = SubResource("CapsuleShape3D_t5uow")

[node name="UI" type="Control" parent="."]
process_mode = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillBar" parent="UI" instance=ExtResource("11_fa8ny")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
number_of_buttons = 5

[node name="PlayerPlate" parent="UI" instance=ExtResource("10_lay5f")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 30.0
offset_right = 30.0
scale = Vector2(2, 2)

[node name="TargetPlate" parent="UI" instance=ExtResource("10_lay5f")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 500.0
offset_right = 500.0
scale = Vector2(2, 2)

[connection signal="body_entered" from="Targeting" to="Targeting" method="_on_body_entered"]
[connection signal="body_exited" from="Targeting" to="Targeting" method="_on_body_exited"]
